syntax = "proto3";

option csharp_namespace = "Proto.Notifications.TimerSettings";

service NotificationService {
  rpc SendDocuTimerSaveIntervalChanged(DocuTimerSaveIntervalChangedNotification) returns (NotificationResponse);
  rpc SendSnapshotSaveIntervalChanged(SnapshotSaveIntervalChangedNotification) returns (NotificationResponse);
  rpc SendTimerSettingsCreated(TimerSettingsCreatedNotification) returns (NotificationResponse);
}

message DocuTimerSaveIntervalChangedNotification {
  string timerSettingsId = 1;
  int32 docuTimerSaveInterval = 2;
}

message SnapshotSaveIntervalChangedNotification {
  string timerSettingsId = 1;
  int32 snapshotSaveInterval = 2;
}

message TimerSettingsCreatedNotification {
  string timerSettingsId = 1;
  int32 documentationSaveInterval = 2;
  int32 snapshotSaveInterval = 3;
}

message NotificationResponse {
  bool success = 1;
}
